# rpycbench

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  install-latest.py  install-latest.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: build-wheel.yml
benchmarks/: PERFORMANCE_STUDY.md
docs/: EXPERIMENT_PLAN.md  api-reference.md  cookbook-python-api.md  quickstart-python-api.md
examples/: autobench_example.py  autonomous_run.py  baseline_comparison.py  binary_transfer.py  context_manager_app_integration.py  context_manager_basic.py  cpu_vs_io_comparison.py  high_concurrency_128.py  profiling_advanced.py  profiling_basic.py  profiling_diagnose_slow_calls.py  quick_test.py
rpycbench/: __init__.py
rpycbench/analysis/: __init__.py  graphs.py
rpycbench/autobench/: __init__.py  __main__.py  patcher.py
rpycbench/benchmarks/: __init__.py  suite.py
rpycbench/core/: __init__.py  benchmark.py  metrics.py
rpycbench/remote/: __init__.py  deployer.py  executor.py  servers.py
rpycbench/runners/: __init__.py  autonomous.py  sweep.py
rpycbench/servers/: __init__.py  http_servers.py  rpyc_servers.py
rpycbench/tests/: README.md  __init__.py  conftest.py  test_autobench.py  test_benchmarks.py  test_concurrency.py  test_docs_examples.py  test_integration.py  test_metrics.py  test_remote.py  test_servers.py  test_telemetry.py
rpycbench/tests/integration/: README.md  __init__.py  test_remote_integration.py
rpycbench/utils/: markers.py  profiler.py  telemetry.py  visualizer.py
