[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpycbench"
version = "0.1.0"
description = "Benchmark suite comparing RPyC with HTTP/REST"
requires-python = ">=3.8"
dependencies = [
    "rpyc>=5.3.0",
    "requests>=2.31.0",
    "flask>=3.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "psutil>=5.9.0",
]

[project.scripts]
rpycbench = "rpycbench.runners.autonomous:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rpycbench*"]
